--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mdbg",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "Node wrapper for the MDBG database",
   "keywords": [
     "cangjie",
@@ -20,7 +20,7 @@
   "main": "index.js",
   "files": [
     "data",
-    "cangjie.json"
+    "lib"
   ],
   "repository": {
     "type": "git",
