--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "cedict": "^1.4.0",
     "level": "^3.0.1",
     "node-fetch": "^2.1.2",
+    "pinyin-split": "^1.0.8",
     "pinyin-utils": "^1.0.8",
     "sublevel": "^2.4.0",
-    "zhuyin": "^1.1.0"
+    "zhuyin": "^1.3.0"
   },
   "devDependencies": {
     "mocha": "^5.1.1",
